--- a/fcsabet/config.toml
+++ b/fcsabet/config.toml
@@ -49,8 +49,8 @@ description = "This is meta description"
 author = "Themefisher"
 # contact info
 address = "9567 Turner Trace Apt. BC C3G8A4"
-mobile = "+211234565523"
-email = "info@educenter.com"
+mobile = "+84 1234565523"
+email = "cs@phenikaa-uni.edu.vn"
 # contact form action
 contact_form_action = "#" # contact form works with https://formspree.io
 # Google Analitycs
@@ -118,7 +118,7 @@ contentDir = "content/english"
 weight = 1
 home = "Home"
 # copyright
-copyright = "Copyright &copy; 2021 a hugo theme by [Themefisher](https://themefisher.com/hugo-themes/)"
+copyright = "Copyright &copy; 2023 [Faculty of Computer Science](https://cs.phenikaa-uni.edu.vn/)"
 
 
 
