--- a/fcsabet/config.toml
+++ b/fcsabet/config.toml
@@ -1,6 +1,6 @@
 ######################## default configuration ####################
 baseURL = "https://demo.gethugothemes.com/fcs/abet/"
-title = "ABET | Fuculty of Computer Science"
+title = "ABET | Faculty of Computer Science"
 theme = "fcs-hugo"
 # post pagination
 paginate = "6"
