--- a/fcsabet/config.toml
+++ b/fcsabet/config.toml
@@ -134,7 +134,7 @@ url = "about/"
 weight = 1
 
 [[Languages.en.menu.main]]
-weight = 3
+weight = 2
 name = "Academics"
 hasChildren = true
 
@@ -155,6 +155,23 @@ hasChildren = true
   #weight = 4
   #name = "Courses"
   #url = "course/"
+
+[[Languages.en.menu.main]]
+weight = 3
+name = "Students"
+hasChildren = true
+
+  [[Languages.en.menu.main]]
+  parent = "Students"
+  weight = 1
+  name = "Academic Advisors"
+  url = "#"
+
+  [[Languages.en.menu.main]]
+  parent = "Students"
+  weight = 2
+  name = "Graduate Studies"
+  url = "#"
 
 [[Languages.en.menu.main]]
 weight = 4
